--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,10 @@ body{
 }
 .background__image{
     height: 100vh;
-    background-image: url("img/WhatsApp\ Image\ 2021-03-01\ at\ 1.32.41\ AM.jpeg");
+    background-image: url("img/formBackground.jpeg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 800px 100%;
+    background-size: 900px 100%;
 }
 .background__image > span{
     display: block;
@@ -60,109 +60,236 @@ body{
     flex-direction: column;
     align-items: center;
 }
-.form__input,
-.form__input:active,
-.form__input:visited{
+.form__control{
     width: 60%;
-    height: 2.5rem;
-    padding-left: 1rem;
-    margin-bottom: 0.7rem;
-    outline: none;
-    border-radius: 0.5rem;
-    border: none;
-}
-.form__input:focus{
-    border: 3px solid rgb(35, 147, 240);
-}
-.form__label{
-    color: white;
-    font-weight: bolder;
-}
-.drop_down{
     display: flex;
-    justify-content: space-between;
-    width: 60%;
-    margin-bottom: 1.2rem;
-    padding: 0.5rem;
+    flex-direction: column;
+    align-items: flex-start;
 }
-.drop_down > select{
-    background-color: white;
-    width: 46%;
-    height: 2.5rem;
-    outline: none;
-    border: none;
-    border-radius: 0.2rem;
+
+.form__control label {
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 900;
+	margin-bottom: 3px;
+}
+.form__control input {
+	border: 2px solid #f0f0f0;
+    border-radius: 4px;
+    display: block;
+    font-family: inherit;
+    font-size: 0.8rem;
+    padding: 0.5rem;
+    width: 100%;
+}
+.form__control input:focus {
+	outline: 0;
+	border-color: rgb(35, 147, 240);
+}
+.form__control select {
+	border: 2px solid #f0f0f0;
+	border-radius: 4px;
+	display: block;
+	font-family: inherit;
+	font-size: 14px;
+	padding: 10px;
+	width: 100%;
 }
 .fee{
+    display: inline-block;
+    text-align: center;
+}
+.fee > input{
+    display: inline-block;
     width: 5rem;
 }
-.form__group{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 60%;
+.fee > span {
+    color: white;
+    margin-left: 3rem;
 }
-.date__input{
-    background-color: white;
-    width: 60%;
-    height: 2.5rem;
-    padding-left: 0.6rem;
-    margin-bottom: 0.7rem;
-    outline: none;
-    border-radius: 0.5rem;
-    border: none;
+.form__control small {
+	color: #e74c3c;
+    visibility: hidden;
+    font-weight: bold;
 }
+
+.form__control.error small {
+	visibility: visible;
+}
+.form__control.success input {
+	border-color: #2ecc71;
+}
+
+.form__control.error input {
+	border-color: #e74c3c;
+}
+
 .btn,.btn:visited{
+    text-decoration: none;
+    text-align: center;
     height: 2.5rem;
     width: 11rem;
+    padding-top: 8px;
     background-color: rgb(35, 147, 240);
     color: white;
-    outline: none;
     border-radius: 0.6rem;
     display: inline-block;
     border: none;
     cursor: pointer;
     transition: hover 0.2s;
+    margin-top: 2rem;
 }
 .btn:hover{
     background-color: white;
     color: rgb(35, 147, 240);
 }
+/*POP*/
+.popup{
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3000;
+    opacity: 0;
+    visibility: hidden;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: all .3s;
+}
 
-@media(max-height: 600px){
+.popup:target{
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup__content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50% , -50%);
+    width: 75%;
+    background-color: white;
+    box-shadow: 0 2rem 4rem rgba(black ,.2);
+    border-radius: 3px;
+    display: table;
+    overflow: hidden;
+    padding: 1.2rem;
+}
+
+.popup__header{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.popup__header > h1{
+    background-color: rgb(35, 147, 240);
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    padding: 0.7rem;
+}
+.popup__header > p {
+    font-size: 1rem;
+    color: rgb(35, 147, 240);
+    letter-spacing: 1px;
+}
+
+.popup__innercontent{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin: 0 auto;
+}
+.row{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    margin-bottom: 0.5rem;
+}
+.row > h4{
+    font-size: 1rem;
+    color: rgb(35, 147, 240);
+    font-weight: bold;
+    margin-right: 1rem;
+}
+.row > p{
+    color: #3d3d3d;
+    font-size: 1rem;
+}
+.row > a{
+    text-decoration: none;
+    text-align: center;
+    height: 2.5rem;
+    width: 11rem;
+    padding-top: 8px;
+    background-color: rgb(35, 147, 240);
+    color: white;
+    border-radius: 0.6rem;
+    display: inline-block;
+    border: none;
+    cursor: pointer;
+    transition: hover 0.2s;
+    margin: 0 auto;
+    margin-top: 2rem;   
+}
+.row > a:hover{
+    background-color: white;
+    color: rgb(35, 147, 240);
+}
+
+.popup__close, .popup__close:link, .popup__close:visited{
+        color: white;
+        position: absolute;
+        top: 1.3rem;
+        right: 2.4rem;
+        font-size: 2.5rem;
+        text-decoration: none;
+        display: inline-block;
+
+    }
+.popup__close:hover{
+        color: rgba(white, 0.5);
+}
+
+
+
+
+
+@media(max-width: 500px){
+    .fee > span {
+        margin-left: 0;
+        visibility: hidden;
+    }
+    .fee{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+@media(max-width: 400px){
+    .form__control label {
+        font-size: 1rem;
+    }
+}
+
+@media(max-height: 750px){
     .background__image{
         height: max-content;
+        padding: 2rem;
     }
 }
 
-@media(min-width: 700px){
-    .form__input,
-    .form__input:active,
-    .form__input:visited{
+@media(min-width: 800px){
+    .form__control{
         width: 45%;
-    }  
-    .drop_down{
-        width: 45%;
-    }
-    .form__group{
-        width: 45%;
-    }
-    .container{
-        background-size: cover;
     }
 }
 
-@media(min-width: 700px){
-    .form__input,
-    .form__input:active,
-    .form__input:visited{
-        width: 30%;
-    }  
-    .drop_down{
+@media(min-width: 1000px){
+    .form__control{
         width: 30%;
     }
-    .form__group{
-        width: 30%;
-    }
-};
+}
 
